other/topologyspreadconstraints-policy/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: topologyspreadconstraints-policy
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
