other/topologyspreadconstraints-policy/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: topologyspreadconstraints-policy
spec:
  steps:
  - name: step-01
    try:
    - script:
        content: |
          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../topologyspreadconstraints-policy.yaml | kubectl create -f -
    - assert:
        file: chainsaw-step-01-assert-1.yaml
  - name: step-02
    try:
    - apply:
        file: podcontrollers-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: podcontrollers-bad.yaml
    finally:
    - sleep:
        duration: 5s
  - name: step-99
    try:
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          name: topologyspreadconstraints-policy
